--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,15 @@ h1 {
   font-size: 3rem;
   font-weight: 900;
   line-height: 1.5;
-  padding: 40px 0 0 0;
+  padding: 40px 0;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
   font-weight: 700;
-  padding: 35px 0;
+  line-height: 1.5;
+  padding: 30px 0 20px;
 }
 
 h3 {
@@ -28,50 +29,17 @@ p {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.4rem;
   font-weight: 600;
-  line-height: 1.3;
-}
-
-a {
-  text-decoration: none;
-}
-
-table {
-  font-family: 'Montserrat', sans-serif;
-}
-
-th, td {
-  border-bottom: 1px solid;
-}
-
-th {
-  height: 70px;
-  width: 10%;
-}
-
-td {
-  height: 50px;
-}
-
-tfoot {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 0.85rem;
+  line-height: 1.5;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 1600px) {
-  .navbar {
-    text-align: left;
-  }
-
-  .navbar-nav {
-    padding-top: 10px;
-  }
-
   h1 {
-    font-size: 2rem;
+    font-size: 2.2rem;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
   }
 
   h4 {
@@ -80,20 +48,29 @@ tfoot {
 
   p {
     font-size: 1.2rem;
+    margin-bottom: 0.8rem;
   }
+
 }
 
 @media (max-width: 992px) {
   body {
     text-align: center;
   }
+
+  .navbar {
+    text-align: left;
+  }
 }
 
-/* title section */
 /* navbar */
+.navbar {
+  padding: 1% 10%;
+}
+
 .navbar-brand {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
@@ -109,9 +86,13 @@ tfoot {
 
 /* gallery */
 /* hometitle section*/
+.top-row {
+  padding-top: 20px;
+}
+
 .col-gall-1 {
-  background-color: #ffffff;
-  color: #086972;
+  background-color: #fff;
+  color: #071A52;
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.1rem;
   font-weight: 900;
@@ -123,22 +104,14 @@ tfoot {
 
 .col-gall-1:hover {
   background-color: #071A52;
-  transition: 0.2s;
-}
-
-.a-desc-1 {
-  color: #086972;
-}
-
-.a-desc-1:hover {
-  color: #A7FF83;
+  color: #fff;
   transition: 0.2s;
 }
 
 /* zagreb section */
 .col-gall-2 {
   background-color: #ffffff;
-  color: #17B978;
+  color: #086972;
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.2rem;
   font-weight: 900;
@@ -150,15 +123,7 @@ tfoot {
 
 .col-gall-2:hover {
   background-color: #086972;
-  transition: 0.2s;
-}
-
-.a-desc-2 {
-  color: #17B978;
-}
-
-.a-desc-2:hover {
-  color: #A7FF83;
+  color: #fff;
   transition: 0.2s;
 }
 
@@ -236,69 +201,70 @@ tfoot {
 
 @media (min-width: 1300px) {
   .btn-bottom-1 {
-    width: 180px;
+    width: 200px;
   }
 
   .btn-bottom-2 {
-    width: 180px;
+    width: 200px;
   }
 }
 
 @media (max-width: 990px) {
   .btn-bottom-1 {
-    width: 180px;
+    width: 240px;
     margin-bottom: 10px;
   }
 
   .btn-bottom-2 {
-    width: 180px;
+    width: 240px;
     margin-bottom: 10px;
   }
 }
 
-.table1 {
-  margin-top: 20px;
-  width: 100%;
-}
-
 #bottom {
-  background-color: #ffffff;
-  padding: 2% 15% 3%;
+  background-color: #fff;
+  padding: 2% 10% 3%;
   text-align: center;
 }
 
 #zagreb {
   background-color: #086972;
-  color: #ffffff;
-  padding: 3% 15%;
+  color: #fff;
+  padding: 3% 10%;
+}
+
+#aboutus {
+  background-color: #086972;
+  color: #fff;
+  padding: 5% 10%;
 }
 
 #options {
   background-color: #071A52;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  padding: 3% 15%;
+  padding: 3% 10%;
 }
 
 #features {
-  padding: 1% 15%;
+  padding: 1% 10% 0;
   text-align: center;
 }
 
 #dalmatiatitle {
   background-color: #086972;
-  color: #ffffff;
-  padding: 3% 15%;
+  color: #fff;
+  padding: 5% 10% 3%;
 }
 
 #hometitle {
   background-color: #071A52;
   color: #ffffff;
-  padding: 3% 15%;
+  padding: 5% 10% 3%;
 }
 
 #€title {
   background-color: #071A52;
   color: #fff;
-  padding: 3% 15%;
+  padding: 5% 10%;
 }
